2007-08-13  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac (svn_revision): Update to latest version from gnupg.

2006-12-13  Werner Koch  <wk@g10code.com>

	* po/LINGUAS: Added sv.

2006-12-13  Daniel Nylander <po@danielnylander.se>  (wk)
	
	* po/sv.po: New. 

2006-10-13  Werner Koch  <wk@g10code.com>

	Released 0.9.91.

2006-08-28  Werner Koch  <wk@g10code.com>

	Released 0.9.90.

2006-04-25  Werner Koch  <wk@g10code.com>

	Released 0.9.10.

2006-04-24  Werner Koch  <wk@g10code.com>

	Released 0.9.9.

	* configure.ac: Use M4 macros to get the actual SVN revision.

2006-03-28  Werner Koch  <wk@g10code.com>


2006-03-21  Werner Koch  <wk@g10code.com>

	Released 0.9.7.

2006-01-26  Werner Koch  <wk@g10code.com>

	Released 0.9.6.

2005-12-07  Werner Koch  <wk@g10code.com>

	Released 0.9.5.

2005-12-06  Werner Koch  <wk@g10code.com>

	Released 0.9.4.

2005-12-02  Werner Koch  <wk@g10code.com>

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): New.

2005-11-30  Werner Koch  <wk@g10code.com>

	* po/de.po: New.

	* po/: New; created by autopoint.
	* po/Makevars: New.
	* m4/Makefile.am: Add new m4 files.
	* autogen.sh: Detect gettext.
	* configure.ac: Check for gettext.

2005-11-15  Werner Koch  <wk@g10code.com>

	* configure.ac (BUILD_TIMESTAMP): Include SVN revision.
	(AM_INIT_AUTOMAKE): Fixed invocation.

2005-10-21  Marcus Brinkmann  <marcus@g10code.de>

	* m4/gpg-error.m4: New file.
	* configure.ac: Also check for gpg-error.

2005-10-11  Werner Koch  <wk@g10code.com>

	* configure.ac: Use MS style bitfields.

2005-10-06  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Change AC_CONFIG_SRCDIR argument to src/gpgol.def.

2005-09-29  Werner Koch  <wk@g10code.com>

	Released 0.9.3.

2005-09-22  Werner Koch  <wk@g10code.com>

	Released 0.9.2.

2005-09-19  Werner Koch  <wk@g10code.com>

	Released 0.9.1.

2005-09-04  Werner Koch  <wk@g10code.com>

	Released 0.9.0. 

2005-08-30  Werner Koch  <wk@g10code.com>

	Renamed project to gpgol.
